--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "types": ["jest", "node"],
-    "module": "commonjs",
+    "module": "ES2015",
     "declaration": true,
     "outDir": "./dist/esm",
     "rootDir": "./src",
@@ -16,7 +16,7 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
+    // "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     /* Advanced Options */
