--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "types": ["jest", "node"],
-    "module": "ES2015",
+    "module": "CommonJS",
     "declaration": true,
     "outDir": "./dist/esm",
     "rootDir": "./src",
